--- a/app/yardWrk/yardSite/templates/yardSite/workerDashboard.html
+++ b/app/yardWrk/yardSite/templates/yardSite/workerDashboard.html
@@ -4,23 +4,21 @@
 
 
 {% block content %}
-    <h1>Worker Profile for {{ name }}</h1>
-
     <div>
         <h1 class="mt-2">Assigned Jobs</h1>
         <hr class="mt-0 mb-4">
         {% if assigned %}
-            <div class="card-columns">
+            <div class="row row-cols-1 row-cols-md-6 g-4">
                 {% for job in assigned %}
-                    <div class="card bg-light text-center">
-                        <h5 class="card-header">{{job.job_type}}</h5>
-                        <div class="card-body">
-                            <p class="card-text">{{job.description}}</li>
-                            <p class="card-text">Payment: ${{job.cash_reward}}</p>
+                    <div class="col">
+                        <div class="card text-center">
+                            <div class="card-header">{{ job.job_type }}</div>
+                            <div class="card-body">
+                                <h5 class="card-title">${{ job.cash_reward }}</h5>
+                                <p class="card-text">{{ job.description }}</p>
+                            </div>
+                            <a href="{% url 'yardSite:ownedJobDetails' job.id %}"><button class="btn btn-outline-primary w-100" href="">Details</button></a>
                         </div>
-                        <a href="{% url 'yardSite:ownedJobDetails' job.id %}">
-                            <button class="btn btn-primary" style="margin-bottom: 10px;">Details</button>
-                        </a>
                     </div>
                 {% endfor %}
             </div>
@@ -28,45 +26,22 @@
             <p>No Jobs Assigned</p>
         {% endif %}
     </div>
-    
-    <div>
-        <h1 class="mt-2">Available Jobs</h1>
-        <hr class="mt-0 mb-4">
-        {% if available %}
-            <div class="card-columns">
-                {% for job in available %}
-                    <div class="card bg-light text-center">
-                        <h5 class="card-header">{{job.job_type}}</h5>
-                        <div class="card-body">
-                            <p class="card-text">{{job.description}}</li>
-                            <p class="card-text">Payment: ${{job.cash_reward}}</p>
-                        </div>
-                        <a href="{% url 'yardSite:ownedJobDetails' job.id %}">
-                            <button class="btn btn-primary" style="margin-bottom: 10px;">Details</button>
-                        </a>
-                    </div>
-                {% endfor %}
-            </div>            
-        {% else %}
-            <p>No Jobs Available</p>
-        {% endif %}
-    </div>
 
     <div>
         <h1 class="mt-2">Completed Jobs</h1>
         <hr class="mt-0 mb-4">
         {% if completed %}
-            <div class="card-columns">
+            <div class="row row-cols-1 row-cols-md-6 g-4">
                 {% for job in completed %}
-                    <div class="card bg-light text-center">
-                        <h5 class="card-header">{{job.job_type}}</h5>
-                        <div class="card-body">
-                            <p class="card-text">{{job.description}}</li>
-                            <p class="card-text">Payment: ${{job.cash_reward}}</p>
+                    <div class="col">
+                        <div class="card text-center">
+                            <div class="card-header">{{ job.job_type }}</div>
+                            <div class="card-body">
+                                <h5 class="card-title">${{ job.cash_reward }}</h5>
+                                <p class="card-text">{{ job.description }}</p>
+                            </div>
+                            <a href="{% url 'yardSite:ownedJobDetails' job.id %}"><button class="btn btn-outline-primary w-100" href="">Details</button></a>
                         </div>
-                        <a href="{% url 'yardSite:ownedJobDetails' job.id %}">
-                            <button class="btn btn-primary" style="margin-bottom: 10px;">Details</button>
-                        </a>
                     </div>
                 {% endfor %}
             </div>
@@ -79,14 +54,14 @@
         <h1 class="mt-2">Reviews received by customers</h1>
         <hr class="mt-0 mb-4">
         {% if workerReviews %}
-            <div class="card-columns">
+            <div class="row row-cols-1 row-cols-md-6 g-4">
                 {% for review in workerReviews %}
                     <div class="card bg-light text-center">
-                        <h5 class="card-header">{{ review.job.job_type}}</h5>
+                        <div class="card-header">{{ review.job.job_type}}</div>
                         <div class="card-body">
                             <p class="card-text">{{ review.job.description}}</li>
                             <p class="card-text">received a {{ review.rating_num }} rating</p>
-			    <p class="card-text"> {{ review.review_text }}</p>
+			                <p class="card-text"> {{ review.review_text }}</p>
                         </div>
                     </div>
                 {% endfor %}
