--- a/app/yardWrk/yardSite/templates/yardSite/home.html
+++ b/app/yardWrk/yardSite/templates/yardSite/home.html
@@ -6,7 +6,7 @@
     <div class="container-fluid vh-100 w-100">
         <div class="row vh-100">
             <div class="col-10">
-                <h1>Available Jobs</h1>
+                <h1>Available Jobs - {{ queryset.count }}</h1>
                 <hr class="mt-0 mb-4">
                 <div class="row row-cols-1 row-cols-md-6 g-4">
                     {% for job in queryset %}
@@ -15,7 +15,7 @@
                                 <div class="card-header">{{ job.job_type }}</div>
                                 <div class="card-body">
                                     <h5 class="card-title">${{ job.cash_reward }}</h5>
-                                    <p class="card-text">{{ job.description }}</p>
+                                    <p class="card-text">{{ job.preview_description }}</p>
                                 </div>
                                 <a href="{% url 'yardSite:ownedJobDetails' job.id %}"><button class="btn btn-outline-primary w-100" href="">Details</button></a>
                             </div>
