--- a/app/yardWrk/owner/templates/owner/owner-dash.html
+++ b/app/yardWrk/owner/templates/owner/owner-dash.html
@@ -7,14 +7,8 @@
 {% block content %}
 
 <div>
-    <h1 class="mt-2">Wallet</h1>
+    <h1 class="mt-2">Your Balance</h1>
     <p>${{ ownerUser.wallet }}</p>
-    <form method="post" class="form-group">
-        {% csrf_token %}
-        $<input type="number" name="Add" value="0" min="0"></input>
-        <button type="submit" class="btn btn-success">Add Funds</button>
-    </form>
-    <br>
     <form method="post" class="form-group">
         {% csrf_token %}
         $<input type="number" name="Withdraw" value="0" min="0"></input>
